objects/Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Auto_Subscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Subscribed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Notification_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is only used in code to determine when an update email should be sent.</description>
        <label>Send Notification Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Subscription ID</label>
        <referenceTo>Eligible_Subscription_Option__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Name__c</fullName>
        <formula>LEFT( Subscription_ID__r.Name__c, FIND( &apos; - &apos;, Subscription_ID__r.Name__c ) )</formula>
        <label>Subscription Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Option_Category__c</fullName>
        <description>Created for CR-20150331-8826</description>
        <formula>TEXT(Subscription_ID__r.Related_Subscription__r.Subscription_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Option Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Option_Id__c</fullName>
        <formula>CASESAFEID(Subscription_ID__r.Related_Subscription__c)</formula>
        <label>Subscription Option Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Option_Site__c</fullName>
        <description>Created for CR-20150331-8826.</description>
        <formula>Text(Subscription_ID__r.Related_Subscription__r.Site__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Option Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Option_Status__c</fullName>
        <description>Created for CR-20150331-8826</description>
        <formula>Text(Subscription_ID__r.Related_Subscription__r.Subscription_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Option Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Status__c</fullName>
        <description>Current status of the subscription record.</description>
        <label>Subscription Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_with_Eloqua__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for CR-20150205-8662</description>
        <label>Sync with Eloqua</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>DateTime</type>
    </fields>
    <label>Subscription</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Subscription#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>